--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,6 +9,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+GameInstanceClass=/Game/Blueprints/FPS_GameInstance_BP.FPS_GameInstance_BP_C
+GlobalDefaultGameMode=/Game/Blueprints/FPS_GameMode_BP.FPS_GameMode_BP_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/FPSShooter")
